z-index fix

--- a/styles.css
+++ b/styles.css
@@ -93,17 +93,17 @@ h4 {
   z-index: 1;
 }
 #overlay {
-  position: fixed; /* Sit on top of the page content */
-  display: none; /* Hidden by default */
-  width: 100%; /* Full width (cover the whole page) */
-  height: 100%; /* Full height (cover the whole page) */
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background-color: rgba(0,0,0,0.6); /* Black background with opacity */
-  z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-  cursor: pointer; /* Add a pointer on hover */
+  z-index: 5;
+  cursor: pointer;
 }
 #closebtn{
   float: right;
@@ -132,7 +132,7 @@ h4 {
   position: relative;
   display: inline-block;
   width: 220px;
-  z-index: 1;
+  z-index: 4;
 }
 input {
   border: 1px solid transparent;
@@ -142,7 +142,7 @@ input {
   font-size: 16px;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 4;
 }
 .autocomplete-items {
   position: absolute;
@@ -151,11 +151,11 @@ input {
   border-top: none;
   color: black;
   font-family: Arial;
-  z-index: 99;
   /*position the autocomplete items to be the same width as the container:*/
   top: 100%;
   left: 0;
   right: 0;
+  z-index: 99;
 }
 .autocomplete-items div {
   padding: 10px;
